welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: ';' expected but 'var' found.
  a var:Int=die1
    ^withoutDoubles:3: error: ';' expected but 'var' found.
  b var:Int=die2
    ^