welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  a var:Int=die1
  b var:Int=die2
  if (noDoubles == true){
    if (die1==6){
      a=1
    }
    if (die2==6){
      b=1
    }
  }
  return a+b
}